codama-macros/tests/node_attribute/no_node.fail.rs
use codama_macros::node;

#[node()]
pub struct Foo(usize);

fn main() {}
